# NovaSonicDemo

./: .gitignore  README.md
backend/: nova_s2s_backend.py  pyproject.toml
backend/agents/bedrock/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py  utility.py
backend/common/client/: client.py
backend/lib/: number_race_tool.py  weather_tool.py
backend/lib/agent_search/: agent_search_tool.py  agentclient.py
backend/lib/image_analyzer/: image_analyzer_llm_client.py  image_analyzer_tool.py
chromeextension/: background.js  index.html  manifest.json  style.css
chromeextension/js/: main_extension.js  toolConfig_extension.js  websocketEvents_extension.js
chromeextension/js/lib/play/: AudioPlayerProcessor_extension.worklet.js  AudioPlayer_extension.js
chromeextension/js/lib/util/: ChatHistoryManager_extension.js
frontend/: index.html
frontend/src/: main.js  toolConfig.js  websocketEvents.js
frontend/src/lib/play/: AudioPlayer.js
